# qbittorrent-automation

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  docker-compose.full-stack.yml  docker-compose.redis.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: release-template.md
.github/workflows/: ci.yml  docker-build.yml  release.yml
config/: config.default.yml  config.example.yml  rules.default.yml  rules.example.yml
docs/: API.md  Architecture.md  Docker.md  resolver-layer.md
lib/: __version__.py  api.py  arguments.py  config.py  engine.py  errors.py  utils.py
scripts/: bump-version.sh
src/qbittorrent_automation/: __init__.py  __version__.py  api.py  arguments.py  config.py  engine.py  errors.py
src/qbittorrent_automation/cli/: manual.py  on_added.py  on_completed.py  scheduled.py
src/qbt_rules/: __version__.py  api.py  arguments.py  cli.py  config.py  engine.py  errors.py  logging.py  queue_manager.py  resolver.py  server.py  worker.py
src/qbt_rules/cli/: __init__.py  manual.py  on_added.py  on_completed.py  scheduled.py
src/qbt_rules/queue_backends/: __init__.py  redis_queue.py  sqlite_queue.py
tests/: __init__.py  conftest.py  test_config.py  test_engine.py  test_utils.py
tests/integration/: test_full_stack.py  test_resolver_e2e.py  test_resolver_integration.py  test_rule_execution.py
tests/unit/: test_api.py  test_arguments.py  test_cli.py  test_cli_main.py  test_config.py  test_errors.py  test_logging.py  test_queue_manager.py  test_redis_queue.py  test_resolver.py  test_resolver_edge_cases.py  test_server.py  test_sqlite_queue.py  test_utils.py  test_worker.py
tests/unit/test_engine/: test_action_executor.py  test_condition_evaluator.py  test_rules_engine.py
triggers/: manual.py  on_added.py  on_completed.py  scheduled.py
